--- a/topografiya/templates/leader/polevoy/polevoy_works.html
+++ b/topografiya/templates/leader/polevoy/polevoy_works.html
@@ -50,9 +50,9 @@
                                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
@@ -86,9 +86,9 @@
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b><span style="color: #168eea;font-size:30px;">
 
                                         <b  class="count" data-all="{% for work in rejecteds %}{% if work.workerobject.object.id == object.object.id %} {{ work.workerobject.id }},{% endif %}{% endfor %}"></b>
@@ -170,9 +170,9 @@
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                         <h5>{{ object.object.pdowork.object_name}}</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
