--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -57,10 +57,11 @@
                                                                         <thead class="bg-primary">
                                                                         <tr class="text-white text-center">
                                                                             <th scope="col">#</th>
-                                                                            <th scope="col">Ishberuvchi</th>
-                                                                            <th scope="col">Ish nomi</th>
-                                                                            <th scope="col">Ish turi</th>
-                                                                            <th scope="col">Muddati</th>
+                                                                            <th scope="col">Буюрмачи</th>
+                                                                            <th scope="col">Объект номи</th>
+                                                                            <th scope="col">Иш тури</th>
+                                                                            <th scope="col">Бажариш муддати</th>
+                                                                            <th scope="col">Холати</th>
 {#                                                                            <th scope="col">Tanishish</th>#}
                                                                         </tr>
                                                                         </thead>
@@ -72,6 +73,8 @@
                                                                                     <td>{{ work.object_name}}</td>
                                                                                     <td>{{ work.work_type}}</td>
                                                                                     <td>{{ work.work_term}} kun</td>
+                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>
+
     {#                                                                                <td class="text-center"><a href="{% url 'show_pdowork' id=work.id %}" class="btn btn-success">Ko'rish</a></td>#}
                                                                           </tr>
 
@@ -89,6 +92,70 @@
 
                             {% endfor %}
                                 {% endif %}
+
+
+
+                                {% if user.profile.status == '0' %}
+                                {% for work in work_new_works %}
+                                <p class="time" id="time" style="display: none">{{ work.pdowork.agreement_date }}</p>
+                                <p class="term" id="term"  style="display: none">{{ work.pdowork.work_term }}</p>
+
+
+                                <div class="fc-day-event one" id="one">
+
+                                            <span class="count"></span>
+                                            <div class="modal fade bd-example-modal-lg" tabindex="-1" style="display: none;" aria-hidden="true">
+                                                <div class="modal-dialog modal-lg">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h4 class="modal-title" id="myLargeModalLabel">Bajaralidigan ish</h4>
+                                                            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close" data-bs-original-title="" title=""></button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="col-sm-12">
+                                                                <div class="table-responsive">
+
+                                                                    <table class="table table-bordered">
+                                                                        <thead class="bg-primary">
+                                                                        <tr class="text-white text-center">
+                                                                            <th scope="col">#</th>
+                                                                            <th scope="col">Буюрмачи</th>
+                                                                            <th scope="col">Объект номи</th>
+                                                                            <th scope="col">Иш тури</th>
+                                                                            <th scope="col">Бажариш муддати</th>
+                                                                            <th scope="col">Холати</th>
+{#                                                                            <th scope="col">Tanishish</th>#}
+                                                                        </tr>
+                                                                        </thead>
+                                                                        <tbody>
+
+                                                                          <tr class="text-center">
+                                                                                    <th scope="row">{{ forloop.counter }}</th>
+                                                                                    <td>{{ work.pdowork.customer_info}}</td>
+                                                                                    <td>{{ work.pdowork.object_name}}</td>
+                                                                                    <td>{{ work.pdowork.work_type}}</td>
+                                                                                    <td>{{ work.pdowork.work_term}} kun</td>
+                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>
+    {#                                                                                <td class="text-center"><a href="{% url 'show_pdowork' id=work.id %}" class="btn btn-success">Ko'rish</a></td>#}
+                                                                          </tr>
+
+
+                                                                        </tbody>
+                                                                    </table>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                            {% endfor %}
+                                {% endif %}
+
+
+
 
 
 
