--- a/topografiya/templates/leader/program_works/program_work_form.html
+++ b/topografiya/templates/leader/program_works/program_work_form.html
@@ -86,16 +86,21 @@
 {#                                               </div>#}
 
                                                <h4 class="text-center">ПРОГРАММА ТОПОГРАФО-ГЕОДЕЗИЧЕСКИХ РАБОТ</h4>
-                                               <p>По <span><input class="w-50 formact" name="a0" value="{{ object.object.pdowork.object_name }} {{ object.object.pdowork.object_address }}" type="text" placeholder="наименование объекта, его местоположение"></span> </p>
-                                               <h5 class="text-center"><span class="badge rounded-pill badge-primary">1</span> ОБЩИЕ ДАННЫЕ</h5>
+                                               <p>По объекту <span><input style="width: 90%" class="formact" name="a0" value="{{ object.object.pdowork.object_name }} {{ object.object.pdowork.object_address }}" type="text" placeholder="наименование объекта, его местоположение">
+                                                <p style="font-size: 12px;margin-top: -15px;margin-left: 150px"> (наименование объекта, его местоположение)</p>
+                                               </span>
+                                              </p>
+
+                                              <label class="col-sm-12 col-form-label"><span class="badge rounded-pill badge-primary">1</span> ОБЩИЕ ДАННЫЕ</label>
                                                <p>
                                                    Основанием для производства работ послужило техническое задание, выданное <sup class="text-danger" style="font-size: 15px">*</sup>
-                                                   <span><input class="w-50 m-b-5 formact" required name="a1_1" type="text"></span>
+                                                   <span><input style="width: 55%" class="m-b-5 formact" value="{{ object.object.pdowork.customer }}" required name="a1_1" type="text"></span>
                                                    <br>
                                                    Цель, назначение и объем проектируемых работ
-                                                   <span><input class="w-50 m-b-5 formact"  name="a1_2" type="text"></span>
+                                                   <span><input style="width: 73%" class="m-b-5 formact"  name="a1_2" type="text"></span>
+                                                   <br><br>
                                                    Дополнительные требования к выполнению геодезических работ
-                                                   <span><input class="w-75 m-b-5 formact"  name="a1_3" type="text"></span>
+                                                   <span><input class="m-b-5 formact" style="width: 64%"   name="a1_3" type="text"></span>
                                                </p>
                                                <div class="mb-3 row">
                                                    <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">2</span> КРАТКАЯ ФИЗИКО-ГЕОГРАФИЧЕСКАЯ ХАРАКТЕРИСТИКА РАЙОНА РАБОТ</label>
@@ -198,7 +203,7 @@
                                                        <textarea class="form-control" type="text" name="a8_1" placeholder="указывается масштаб и вид плана, выноса эскизов на план и пр."></textarea>
                                                    </div>
                                                </div>
-                                               <h5 class="text-center"><span class="badge rounded-pill badge-primary">9</span> ИНЖЕНЕРНЫЕ ИЗЫСКАНИЯ ДЛЯ ЛИНЕЙНОГО СТРОИТЕЛЬСТВА</h5>
+                                              <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">9</span> ИНЖЕНЕРНЫЕ ИЗЫСКАНИЯ ДЛЯ ЛИНЕЙНОГО СТРОИТЕЛЬСТВА</label>
                                                <div class="mb-3 row">
                                                    <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-warning">9.1</span> Виды, объемы и технические характеристики линейных сооружений, подлежащих изысканиям</label>
                                                    <div class="col-sm-9">
@@ -264,23 +269,23 @@
                                                        <textarea class="form-control" type="text" name="a10" placeholder="самоконтроль исполнителя, проверка работ в процессе их выполнения, приемка завершенных полевых работ"></textarea>
                                                    </div>
                                                </div>
-                                               <h5 class="text-center"><span class="badge rounded-pill badge-primary">11</span> ТЕХНИКА БЕЗОПАСНОСТИ</h5>
+                                              <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">11</span> ТЕХНИКА БЕЗОПАСНОСТИ</label>
                                                <p>
                                                    К работе допускаются лица, прошедшие вводный инструктаж по технике безопасности, соблюдению полевой гигиены и санитарии <span><sup style="color: red">*</sup></span>
                                                    <textarea style="height: 100px;" name="a11" class="form-control" placeholder="кто проводит, где, когда"></textarea>
                                                </p>
                                                <div class="mb-3 row">
-                                                    <h5 class="text-center"><span class="badge rounded-pill badge-primary">12</span> ИСПОЛНИТЕЛИ И СРОКИ ВЫПОЛНЕНИЯ РАБОТ</h5>
+                                                   <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">12</span> ИСПОЛНИТЕЛИ И СРОКИ ВЫПОЛНЕНИЯ РАБОТ</label>
 
                                                    <div class="col-sm-12">
                                                        <textarea class="form-control" name="a12" type="text" placeholder="очередность выполнения работ по объектам и передача для камеральной обработки"></textarea>
                                                    </div>
                                                </div>
-                                               <h5 class="text-center"><span class="badge rounded-pill badge-primary">13</span> ПЕРЕЧЕНЬ МАТЕРИАЛОВ, ПРИЛАГАЕМЫХ К ПРОГРАММЕ</h5>
+                                              <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">13</span> ПЕРЕЧЕНЬ МАТЕРИАЛОВ, ПРИЛАГАЕМЫХ К ПРОГРАММЕ</label>
                                                <div class="floder_input">
                                                    <div class="row">
-                                                       <div class="col-lg-6 mt-3" style="font-size: 18px">1. <a href="#"><i class="fa fa-file-pdf-o"></i>Копии задания на производство изысканий </a></div>
-                                                       <div class="col-lg-6 mt-3"><input class="form-control" name="file1" id="file1" type="file"></div>
+                                                       <div class="col-lg-6 mt-3" style="font-size: 18px">1. <a href="/{{ object.object.pdowork.tz }}" target="_blank"><i class="fa fa-file-pdf-o"></i>Копии задания на производство изысканий </a></div>
+{#                                                       <div class="col-lg-6 mt-3"><input class="form-control" name="file1" id="file1" type="file"></div>#}
 
                                                        <div class="col-lg-6 mt-3" style="font-size: 18px">2. <a href="#"><i class="fa fa-file-pdf-o"></i> Схема топографо-геодезической изученности района (участка) работ</a></div>
                                                        <div class="col-lg-6 mt-3"><input class="form-control" name="file2" id="file2" type="file"></div>
@@ -300,7 +305,7 @@
                                                        <div class="col-lg-6 mt-3" style="font-size: 18px">7. <a href="#"><i class="fa fa-file-pdf-o"></i> Схема линейных сооружений</a></div>
                                                        <div class="col-lg-6 mt-3"><input class="form-control" name="file7" id="file7" type="file"></div>
 
-                                                       <h5 class="m-t-15">Примечание. <i>Допускается совмещение прилагаемых схем и картограмм.</i></h5>
+{#                                                       <h5 class="m-t-15">Примечание. <i>Допускается совмещение прилагаемых схем и картограмм.</i></h5>#}
                                                    </div>
                                                </div>
                                                <div class="m-b-20 m-t-20 row">
