--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -243,7 +243,7 @@
                                     <li><a href="{% url 'polevoy_works' %}">Жорий ишлар
                                         {% if count_works.new_field_works != 0 %}
                                             <span style="float: right" class="badge rounded-pill badge-danger">
-                                                     {{ count_works.new_field_works }}
+                                                     {{ count_works.all_works_worker }}
                                                 </span>
                                               {% endif %}
 
