--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -61,7 +61,7 @@
                                                                             <th scope="col">Объект номи</th>
                                                                             <th scope="col">Иш тури</th>
                                                                             <th scope="col">Бажариш муддати</th>
-                                                                            <th scope="col">Холати</th>
+{#                                                                            <th scope="col">Холати</th>#}
 {#                                                                            <th scope="col">Tanishish</th>#}
                                                                         </tr>
                                                                         </thead>
@@ -73,7 +73,7 @@
                                                                                     <td>{{ work.object_name}}</td>
                                                                                     <td>{{ work.work_type}}</td>
                                                                                     <td>{{ work.work_term}} kun</td>
-                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>
+{#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
 
     {#                                                                                <td class="text-center"><a href="{% url 'show_pdowork' id=work.id %}" class="btn btn-success">Ko'rish</a></td>#}
                                                                           </tr>
@@ -123,7 +123,7 @@
                                                                             <th scope="col">Объект номи</th>
                                                                             <th scope="col">Иш тури</th>
                                                                             <th scope="col">Бажариш муддати</th>
-                                                                            <th scope="col">Холати</th>
+{#                                                                            <th scope="col">Холати</th>#}
 {#                                                                            <th scope="col">Tanishish</th>#}
                                                                         </tr>
                                                                         </thead>
@@ -135,7 +135,7 @@
                                                                                     <td>{{ work.pdowork.object_name}}</td>
                                                                                     <td>{{ work.pdowork.work_type}}</td>
                                                                                     <td>{{ work.pdowork.work_term}} kun</td>
-                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>
+{#                                                                                    <td><a href="#" class="btn btn-primary">Ko'rish</a></td>#}
     {#                                                                                <td class="text-center"><a href="{% url 'show_pdowork' id=work.id %}" class="btn btn-success">Ko'rish</a></td>#}
                                                                           </tr>
 
